<resources>
    <string name="app_name">Render</string>
    <string name="app_version">Version 1.0</string>
    <string name="action_settings">Settings</string>
    <!-- Activities -->
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_demo">Demo</string>
    <string name="title_activity_text">Text</string>
    <string name="title_activity_model">Model</string>
    <!-- Demo menu -->
    <string name="item">item</string>

    <string-array name="menu_items">
        <item>Load Model</item>
        <!--<item>Models</item>-->
        <item>Demo</item>
        <item>Help</item>
        <item>About</item>
        <!--<item>GitHub</item>-->
        <item>Exit</item>
    </string-array>

    <string name="image">image</string>
    <!-- Help -->
    <string name="help_text">Load Model\n\nLoad the samples included with the app (Samples), github repository (Repository) or download them to your device and open it (using File or Android Explorer)\n\nSupported formats\n\nOnly wavefront, stereolithography or Collada files (*.obj, *.stl, *.dae) are currently supported.\n\nDemo\n\nExample scene using the API. It loads several models using different draw modes, colors, textures, etc.\n\nRenderer\n\nOnce you load a model, you can pinch to zoom, translate the camera with your finger and rotate the screen with 2 fingers\n\nToolbar\n\nIn the action bar you will also find several buttons for toggling different draw modes like wireframe or points, enabling or disabiling lights, textures or animation.\n\nTroubleshooting\n\nIf the model file (.obj) is referencing any materials file (*.mtl) be sure its in the same folder; same applies for texture files (*.jpg, *.bmp) being referenced in the material file.\n\nIf you need more help or have any issue feel free to open a ticket in github or ask me. Thank you in advance for your feedback.\n\nhttps://github.com/andresoviedo/android-3D-model-viewer/issues\n\nandresoviedo@gmail.com</string>
    <!-- About -->
    <string name="about_text">This application allows you to load 3D object models (currently only Wavefront, Stereolithography and Collada formats are supported).\n\nThe purpose of this application is to learn how to draw in android using the OpenGL 2.0 language.\n\nThe code for this application is open source and it can be found at https://github.com/andresoviedo/android-3D-model-viewer\n\nAs this is my first android app and Im still learning the OpenGL 2.0 language, it is highly probable that there are bugs; but I will try to continue improving the app.\n\nThe included models in the app were taken for free from Internet.\n\nThis application does not collect or make use of any kind of personal information.\n\nAny comments, suggestions, contributions, complains or donations are welcome. Feel free to contact me at andresoviedo@gmail.com.\n\nhttp://www.andresoviedo.org</string>
    <!-- Load settings -->
    <string name="model_name">Model name</string>
    <string name="texture">Texture</string>
    <string name="invert_texture_coordinates">Invert texture coordinates</string>
    <string name="cancel">Cancel</string>
    <string name="load">Load</string>
    <string name="load_model">Load Model</string>

    <!-- Scene settings -->
    <string name="scene">Scene...</string>
    <!-- GL Settings -->
    <string name="toggle_wireframe">Toggle wireframe</string>
    <string name="toggle_textures">Toggle textures</string>
    <string name="toggle_lights">Toggle lights</string>
    <string name="toggle_animation">Toggle animation</string>
    <!--<string name="toggle_skeleton">Toggle skeleton</string>-->
    <string name="toggle_boundingbox">Toggle bounding box</string>
    <string name="load_texture">Load texture</string>

    <!-- To review -->
    <string name="app_logo_desc">Teapot animated logo</string>
    <string name="description">Description</string>
    <string name="save">save</string>
    <string name="upload">Upload</string>
    <string name="wire_out">Wire Out</string>
    <string name="isolate">Isolate</string>
    <string name="drop">Drop</string>
    <string name="clear_selections">Clear Selections</string>
    <string name="toggle_explode">Toggle explode</string>
    <string name="submit">submit</string>
    <string name="review">Review</string>
    <string name="feedback">Feedback</string>
    <string name="rate_this_model">Rate this model</string>
    <string name="write_a_review">Write a review</string>
    <string name="ip_addr">192.168.43.19</string>
    <string name="muc_service">conference.griffin.chatdiary.com</string>
    <string name="placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="permissions_needed">Cannot access mic. Permission was denied.</string>
    <string name="error_retrieving_access_token">Error retrieving access token</string>
</resources>