<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewActivity">

    <TextView
        android:id="@+id/rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_this_model"
        android:textAppearance="?android:textAppearanceMedium"
        android:labelFor="@id/rating_bar"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:numStars="5"
        android:rating="0"
        app:layout_constraintTop_toBottomOf="@id/rating_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/feedback_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_a_review"
        android:textAppearance="?android:textAppearanceMedium"
        android:labelFor="@id/review_et"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/rating_bar"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/review_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feedback"
        android:gravity="bottom"
        android:inputType="textMultiLine"
        android:lines="8"
        app:layout_constraintTop_toBottomOf="@id/feedback_label" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/cancel"
        style="@style/NegativeButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.4805"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/submit"
        style="@style/PositiveButtonStyle"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.4805"/>
</androidx.constraintlayout.widget.ConstraintLayout>