<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="com.example.render.AddModelActivity">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/model_name"
        app:layout_constraintBottom_toTopOf="@id/category_select"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/category_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/edit_description"
        app:layout_constraintTop_toBottomOf="@id/category_select" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:gravity="bottom"
        android:inputType="textMultiLine"
        android:lines="5"
        app:layout_constraintTop_toBottomOf="@id/category_select" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/cancel"
        style="@style/NegativeButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.4805"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/save"
        style="@style/PositiveButtonStyle"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.4805"/>

</androidx.constraintlayout.widget.ConstraintLayout>